accessibility contrast issue fixes

--- a/frontend/src/components/forum-card/style.module.scss
+++ b/frontend/src/components/forum-card/style.module.scss
@@ -56,7 +56,7 @@
     font-weight: 700;
     letter-spacing: 0.24px;
     text-transform: uppercase;
-    color: $primaryPurple;
+    color: $primaryPurple7;
   }
 }
 .forumWrapper {
