--- a/frontend/src/modules/forum/forum.module.scss
+++ b/frontend/src/modules/forum/forum.module.scss
@@ -7,7 +7,7 @@
   font-weight: 700;
   letter-spacing: 0.24px;
   text-transform: uppercase;
-  color: $primaryPurple;
+  color: $primaryPurple7;
 }
 .forumDesc {
   color: $primaryDarkBlue4;
